--- a/frontend/package.json
+++ b/frontend/package.json
@@ -20,7 +20,10 @@
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
     "@vue/tsconfig": "^0.7.0",
+    "autoprefixer": "^10.4.14",
     "npm-run-all2": "^7.0.2",
+    "postcss": "^8.4.31",
+    "tailwindcss": "^3.3.0",
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
