--- a/package.json
+++ b/package.json
@@ -1,4 +1,7 @@
 {
+  "scripts": {
+    "start": "java -jar target/stock-evaluator-backend-0.0.1-SNAPSHOT.jar"
+  },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
     "autoprefixer": "^10.4.21",
