--- a/package.json
+++ b/package.json
@@ -1,6 +1,21 @@
 {
+  "name": "stockevaluator-ai",
+  "version": "0.0.0",
+  "private": true,
+  "type": "module",
   "scripts": {
-    "start": "java -jar target/stock-evaluator-backend-0.0.1-SNAPSHOT.jar"
+    "dev": "vite",
+    "build": "run-p type-check \"build-only {@}\" --",
+    "preview": "vite preview",
+    "test:unit": "vitest",
+    "prepare": "cypress install",
+    "test:e2e": "start-server-and-test preview http://localhost:5173 'cypress run --e2e'",
+    "test:e2e:dev": "start-server-and-test 'vite dev --port 5173' http://localhost:5173 'cypress open --e2e'",
+    "build-only": "vite build",
+    "type-check": "vue-tsc --build",
+    "lint": "eslint . --fix",
+    "format": "prettier --write src/",
+    "preinstall": "npx only-allow pnpm"
   },
   "devDependencies": {
     "@tailwindcss/postcss7-compat": "^2.2.17",
