--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,7 @@
     "vee-validate": "^4.15.0",
     "vue": "^3.5.13",
     "vue-router": "^4.5.0",
+    "vue-sonner": "^2.0.0",
     "zod": "^3.25.42"
   },
   "devDependencies": {
@@ -29,6 +30,7 @@
     "@tsconfig/node22": "^22.0.1",
     "@types/node": "^22.14.0",
     "@vitejs/plugin-vue": "^5.2.3",
+    "@vue/test-utils": "^2.4.6",
     "@vue/tsconfig": "^0.7.0",
     "autoprefixer": "^10.4.21",
     "class-variance-authority": "^0.7.1",
@@ -41,6 +43,7 @@
     "typescript": "~5.8.0",
     "vite": "^6.2.4",
     "vite-plugin-vue-devtools": "^7.7.2",
+    "vitest": "^3.1.4",
     "vue-tsc": "^2.2.8"
   }
 }
