--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,9 @@
     "type-check": "vue-tsc --build"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@mui/material": "^7.1.1",
     "@vee-validate/zod": "^4.15.0",
     "axios": "^1.9.0",
     "clsx": "^2.1.1",
