added reddit variables

--- a/backend/.env
+++ b/backend/.env
@@ -1,8 +1,8 @@
 #Reddit configuration
-reddit.client.id=
-reddit.client.secret=
-reddit.username=BigCucumber2565
-reddit.password=Shiza2004!
+REDDIT_CLIENT_ID=AB5d0hlCbKStllHtKYOdDQ
+REDDIT_CLIENT_SECRET=JMjWlCVjqs_U8qS9VTie7CJsPtDnVQ
+REDDIT_USERNAME=BigCucumber2565
+REDDIT_PASSWORD=Shiza2004!
 
 #Databse enviromental variables
 spring.datasource.url=jdbc:mysql://localhost:3306/stockevaluator
