--- a/backend/.env
+++ b/backend/.env
@@ -5,6 +5,6 @@ REDDIT_USERNAME=BigCucumber2565
 REDDIT_PASSWORD=Shiza2004!
 
 #Databse enviromental variables
-spring.datasource.url=jdbc:mysql://localhost:3306/stockevaluator
-spring.datasource.username=sa
-spring.datasource.password=password
+#SPRING_DATASOURCE_URL=jdbc:mysql://localhost:3306/stockevaluator
+#SPRING_DATASOURCE_USERNAME=sa
+#SPRING_DATASOURCE_PASSWORD=password
