fixes for deploy

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -1,4 +1,5 @@
-FROM eclipse-temurin:17-jdk-alpine as build
+# Use platform-compatible images
+FROM eclipse-temurin:17-jdk AS build
 WORKDIR /workspace/app
 
 COPY mvnw .
@@ -9,7 +10,7 @@ COPY src src
 RUN ./mvnw install -DskipTests
 RUN mkdir -p target/dependency && (cd target/dependency; jar -xf ../*.jar)
 
-FROM eclipse-temurin:17-jre-alpine
+FROM eclipse-temurin:17-jre
 VOLUME /tmp
 ARG DEPENDENCY=/workspace/app/target/dependency
 COPY --from=build ${DEPENDENCY}/BOOT-INF/lib /app/lib
