--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -63,6 +63,10 @@
             <artifactId>spring-boot-starter-validation</artifactId>
         </dependency>
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-actuator</artifactId>
+        </dependency>
+        <dependency>
             <artifactId>jjwt-api</artifactId>
             <groupId>io.jsonwebtoken</groupId>
             <version>${jjwt.version}</version>
