--- a/railway.toml
+++ b/railway.toml
@@ -1,9 +1,7 @@
 [build]
-builder = "nixpacks"
-buildCommand = "cd backend && ./mvnw clean package -DskipTests"
+dockerfilePath = "backend/Dockerfile"
 
 [deploy]
-startCommand = "java -jar backend/target/stock-evaluator-backend-0.0.1-SNAPSHOT.jar"
 healthcheckPath = "/actuator/health"
 healthcheckTimeout = 300
 restartPolicyType = "on_failure" 
